--- a/Index.html
+++ b/Index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="wiidth=device-width initial-scale=1.0">
-    <title>Hooo  </title>
-    <style>
-        body{
-            background-color: blueviolet(0,255,234);
-        }
-           body{
-                text-align: center;
-        }
-           body{
-            text-color: rgb(195, 0, 255);
-           }
-
-
-    </style>
-</head>
-<body>
-<h1>Titulo</h1>
-<script>
-
-
-</script>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atividade JavaScript</title>
+    <link rel="stylesheet" href="estilo.css">
+  </head>
+  <body onload="carregar()">
+     <header>
+       <h1>Maikley Dieferson do Senhor</h1>
+     </header>
+     <section>
+       <div id="msg">
+         Aqui vai aparecer um mensagem!!!
+       <div id="foto">
+         <img id="imagem" src="manhã.jpg" alt="imagem do dia">
+       </div>
+     </section>
+     <footer>
+       <p>&copy;Atividade Javascript</p>
+     </footer>
+     <script src="script.js"></script>
+  </body>
 </html>
