--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
        <div id="msg">
          Aqui vai aparecer um mensagem!!!
        <div id="foto">
-         <img id="imagem" src="" alt="imagem do dia">
+         <img id="imagem" src="585bfef848abfccbae82c9828989a967.jpg" alt="imagem do dia">
        </div>
      </section>
      <footer>
